<resources>
    <string name="app_name">App Store Latest!</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="audioBooks">Audio Book</string>
    <string name="title_activity_media_list">MediaListActivity</string>
    <string name="title_activity_detailed_media">DetailedMediaActivity</string>
    <string name="books">Books</string>
    <string name="iosApps">iOS Apps</string>
    <string name="itunesU">iTunes U</string>
    <string name="macApps">Mac Apps</string>
    <string name="movies">Movies</string>
    <string name="podcasts">Podcasts</string>
    <string name="tvShows">TV Shows</string>
    <string name="title_activity_preview">PreviewActivity</string>
</resources>
