<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/audioBooks"
                android:layout_margin="@dimen/menuMargin"
                android:text="@string/audioBooks"
                android:gravity="center"
                android:textSize="@dimen/menuTextSize"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/books"
                android:layout_margin="@dimen/menuMargin"
                android:text="@string/books"
                android:gravity="center"
                android:textSize="@dimen/menuTextSize"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/iosApps"
                android:layout_margin="@dimen/menuMargin"
                android:text="@string/iosApps"
                android:gravity="center"
                android:textSize="@dimen/menuTextSize"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/itunesU"
                android:layout_margin="@dimen/menuMargin"
                android:text="@string/itunesU"
                android:gravity="center"
                android:textSize="@dimen/menuTextSize"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/macApps"
                android:layout_margin="@dimen/menuMargin"
                android:text="@string/macApps"
                android:gravity="center"
                android:textSize="@dimen/menuTextSize"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/movies"
                android:layout_margin="@dimen/menuMargin"
                android:text="@string/movies"
                android:gravity="center"
                android:textSize="@dimen/menuTextSize"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/podcasts"
                android:layout_margin="@dimen/menuMargin"
                android:text="@string/podcasts"
                android:gravity="center"
                android:textSize="@dimen/menuTextSize"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tvShows"
                android:layout_margin="@dimen/menuMargin"
                android:text="@string/tvShows"
                android:gravity="center"
                android:textSize="@dimen/menuTextSize"/>

        </LinearLayout>
    </ScrollView>

</RelativeLayout>
